--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -6,7 +6,7 @@ on: [push, workflow_dispatch]
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
   RESOURCE-GROUP: rg-eshoponweb
-  LOCATION: eastus
+  LOCATION: southcentral
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: 5c315440-bdb2-4ecb-b7ac-468d487fbe22
   WEBAPP-NAME: eshoponweb-webapp49976510az ad sp create-for-rbac --name GH-Action-eshoponweb49976510 --role contributor --scopes /subscriptions/SUBSCRIPTION-ID/resourceGroups/RESOURCE-GROUP --sdk-authc
